--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <!--
         Start Quiz Button
     -->
-      <div>
+      <div class="start-button">
         <button>Start Quiz</button>
       </div>
       <!--Information Box-->
-      <div>
+      <div class="info-title">
         <span> Rules to the Quiz </span>
       </div>
-      <div>
+      <div class="information-list">
         <div class="info">
           1. You will have only <span>15 seconds</span> per each question.
         </div>
@@ -41,6 +41,10 @@
         <div class="info">
           5. You'll receive a final score at the end of your quiz.
         </div>
+      </div>
+      <div class="quiz-buttons">
+        <button class="end">Exit Quiz</button>
+        <button class="resume">Continue</button>
       </div>
     </div>
     <script src="./assets/script.js"></script>
