added header/section/footer of quiz

--- a/index.html
+++ b/index.html
@@ -46,6 +46,37 @@
         <button class="end">Exit Quiz</button>
         <button class="resume">Continue</button>
       </div>
+      <!--Quiz Box header-->
+      <div>
+        <header>
+          <div class="quiz-title">
+            <h1>Code quiz</h1>
+          </div>
+          <div class="time-left">
+            <h1>Time Left</h1>
+          </div>
+          <div class="timer-sec">30</div>
+          <div class="time-amount"></div>
+        </header>
+      </div>
+      <!--Section of Code Quiz-->
+      <section>
+        <div class="main question">
+          <!--Question will be inserted with javascript-->
+        </div>
+        <div class="option-list">
+          <!--Options will be inserted with javascript-->
+        </div>
+      </section>
+      <!--Footer of Code Quiz-->
+      <footer>
+        <div class="total-ques">
+          <!--The total number of questions will be inserted with javascript-->
+        </div>
+        <div>
+          <button class="next-button">Next Question</button>
+        </div>
+      </footer>
     </div>
     <script src="./assets/script.js"></script>
   </body>
