--- a/index.html
+++ b/index.html
@@ -77,6 +77,20 @@
           <button class="next-button">Next Question</button>
         </div>
       </footer>
+      <!--Quiz Results-->
+      <div class="result-box">
+        <div class="icon">
+          <i class="fas fa-crown"></i>
+        </div>
+        <div class="complete-quiz">You've completed the Quiz!</div>
+        <div class="score-quiz">
+          <!-- Score will be inserted from JavaScript -->
+        </div>
+        <div class="buttons">
+          <button class="restart">Restart Quiz</button>
+          <button class="quit">Quit Quiz</button>
+        </div>
+      </div>
     </div>
     <script src="./assets/script.js"></script>
   </body>
