added styles to buttons

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
       <!--
         Start Quiz Button
     -->
-      <div class="start-button">
-        <button>Start Quiz</button>
-      </div>
+      <div class="start-button btn btn-primary">Start Quiz</div>
       <!--Information Box-->
       <div class="info-title">
         <span> Rules to the Quiz </span>
@@ -43,8 +41,8 @@
         </div>
       </div>
       <div class="quiz-buttons">
-        <button class="end">Exit Quiz</button>
-        <button class="resume">Continue</button>
+        <div class="end btn btn-warning">Exit Quiz</div>
+        <div class="resume btn btn-success">Continue</div>
       </div>
       <!--Quiz Box header-->
       <div>
@@ -74,7 +72,7 @@
           <!--The total number of questions will be inserted with javascript-->
         </div>
         <div>
-          <button class="next-button">Next Question</button>
+          <div class="next-button btn btn-success">Next Question</div>
         </div>
       </footer>
       <!--Quiz Results-->
@@ -87,8 +85,8 @@
           <!-- Score will be inserted from JavaScript -->
         </div>
         <div class="buttons">
-          <button class="restart">Restart Quiz</button>
-          <button class="quit">Quit Quiz</button>
+          <div class="restart btn btn-success">Restart Quiz</div>
+          <div class="quit btn btn-danger">Quit Quiz</div>
         </div>
       </div>
     </div>
