added styling to quiz box

--- a/index.html
+++ b/index.html
@@ -20,41 +20,41 @@
     -->
       <div class="start-button btn btn-primary">Start Quiz</div>
       <!--Information Box-->
-      <div class="info-title">
-        <span> Rules to the Quiz </span>
-      </div>
-      <div class="information-list">
-        <div class="info">
-          1. You will have only <span>15 seconds</span> per each question.
+      <div class="info-box">
+        <div class="info-heading">
+          <span> Rules to the Quiz </span>
         </div>
-        <div class="info">
-          2. Once you select your answer, it can't be changed.
+        <div class="information-list">
+          <div class="info">
+            1. You will have only <span>30 seconds</span> per each question.
+          </div>
+          <div class="info">
+            2. Once you select your answer, it can't be changed.
+          </div>
+          <div class="info">
+            3. You can't select any option once you run out of time.
+          </div>
+          <div class="info">
+            4. You can't exit from the Quiz while you're playing.
+          </div>
+          <div class="info">
+            5. You'll receive a final score at the end of your quiz.
+          </div>
         </div>
-        <div class="info">
-          3. You can't select any option once you run out of time.
+        <div class="quiz-buttons">
+          <div class="end btn btn-warning">Exit Quiz</div>
+          <div class="resume btn btn-success">Continue</div>
         </div>
-        <div class="info">
-          4. You can't exit from the Quiz while you're playing.
-        </div>
-        <div class="info">
-          5. You'll receive a final score at the end of your quiz.
-        </div>
-      </div>
-      <div class="quiz-buttons">
-        <div class="end btn btn-warning">Exit Quiz</div>
-        <div class="resume btn btn-success">Continue</div>
       </div>
       <!--Quiz Box header-->
-      <div>
+      <div class="quiz-box">
         <header>
           <div class="quiz-title">
             <h1>Code quiz</h1>
           </div>
           <div class="time-left">
-            <h1>Time Left</h1>
+            <h1>Time Left- 00:30</h1>
           </div>
-          <div class="timer-sec">30</div>
-          <div class="time-amount"></div>
         </header>
       </div>
       <!--Section of Code Quiz-->
