added styling to footer/results section

--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
   </head>
   <body>
     <div class="container">
-      <!--
-        Start Quiz Button
-    -->
-      <div class="start-button btn btn-primary">Start Quiz</div>
       <!--Information Box-->
       <div class="info-box">
         <div class="info-heading">
@@ -43,15 +39,13 @@
         </div>
         <div class="quiz-buttons">
           <div class="end btn btn-warning">Exit Quiz</div>
-          <div class="resume btn btn-success">Continue</div>
+          <div class="start-button btn btn-primary">Start</div>
         </div>
       </div>
       <!--Quiz Box header-->
       <div class="quiz-box">
         <header>
-          <div class="quiz-title">
-            <h1>Code quiz</h1>
-          </div>
+          <div class="quiz-title">Code Quiz</div>
           <div class="time-left">
             <h1>Time Left- 00:30</h1>
           </div>
