updated getQuestions function

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
       </div>
       <!--Section of Code Quiz-->
       <section>
-        <div class="main-question">
+        <div class="main-question" id="main-question">
           <!--Question will be inserted with javascript-->
         </div>
-        <div class="option-list">
+        <div class="option-list" id="option-list">
           <!--Options will be inserted with javascript-->
         </div>
       </section>
