revised html and css

--- a/index.html
+++ b/index.html
@@ -46,52 +46,12 @@
           </div>
         </div>
       </div>
-      <!--Quiz Box header-->
-      <div class="quiz-box">
-        <header>
-          <div class="quiz-title">Code Quiz</div>
-          <div class="time-left">
-            <h1 id="timer"></h1>
-          </div>
-        </header>
-      </div>
-      <!--Section of Code Quiz-->
-      <section>
-        <div class="main-question" id="main-question">
-          <!--Question will be inserted with javascript-->
-        </div>
-        <div class="option-list" id="option-list">
-          <!--Options will be inserted with javascript-->
-        </div>
-      </section>
-      <!--Footer of Code Quiz-->
-      <footer>
-        <div class="total-ques">
-          <!--The total number of questions will be inserted with javascript-->
-        </div>
-        <div>
-          <div class="next-button btn btn-success" id="next-button">
-            Next Question
-          </div>
-        </div>
-      </footer>
-      <!--Quiz Results-->
-      <div class="result-box" id="result-box">
-        <div class="complete-quiz">You've completed the Quiz!</div>
-        <div class="score-quiz">
-          <!-- Score will be inserted from JavaScript -->
-        </div>
-        <div class="buttons">
-          <div class="restart btn btn-success" id="restart-button">
-            Restart Quiz
-          </div>
-          <div class="quit btn btn-danger" id=" quit-button">Quit Quiz</div>
-        </div>
-      </div>
-      <div class="setHighscore">
-        <input type="text" />
-        <button>Submit</button>
-      </div>
+
+      <!--Quiz Starts-->
+      <div id="quiz">Code Quiz</div>
+      <div id="timer"></div>
+      <div class="btn btn-success" id="submit">Get Results</div>
+      <div id="results"></div>
     </div>
     <script src="./assets/script.js"></script>
   </body>
