added questions/answers to code quiz

--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
       </div>
 
       <!--Quiz Starts-->
+      <div id="quiz-box">
       <div id="quiz">Code Quiz</div>
       <div id="timer"></div>
       <div class="btn btn-success" id="submit">Get Results</div>
       <div id="results"></div>
+    </div>
     </div>
     <script src="./assets/script.js"></script>
   </body>
