added local storage feature

--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
 
       <!--Quiz Starts-->
       <div id="quiz-box">
-      <div id="quiz">Code Quiz</div>
-      <div id="timer"></div>
-      <div class="btn btn-success" id="submit">Get Results</div>
-      <div id="results"></div>
-    </div>
+        <div id="quiz">Code Quiz</div>
+        <div id="timer"></div>
+        <p>Enter your initials for results:</p>
+        <input type="text" id="initials" />
+        <div class="btn btn-success" id="submit">Get Results</div>
+        <div id="results"></div>
+      </div>
     </div>
     <script src="./assets/script.js"></script>
   </body>
