--- a/index.html
+++ b/index.html
@@ -23,24 +23,18 @@
           </div>
           <div class="information-list">
             <div class="info">
-              1. You will have only <span>30 seconds</span> per each question.
+              1. You will have only <span>60 seconds</span> for all questions.
             </div>
             <div class="info">
-              2. Once you select your answer, it can't be changed.
+              2. You can't exit from the Quiz while it is in progress.
             </div>
             <div class="info">
-              3. You can't select any option once you run out of time.
-            </div>
-            <div class="info">
-              4. You can't exit from the Quiz while you're playing.
-            </div>
-            <div class="info">
-              5. You'll receive a final score at the end of your quiz.
+              3. You'll receive a final score at the end of your quiz when you
+              input your initials.
             </div>
           </div>
         </div>
-        <div class="quiz-buttons">
-          <div class="end btn btn-warning" id="exit-button">Exit Quiz</div>
+        <div class="quiz-button">
           <div class="start-button btn btn-primary" id="start-button">
             Start
           </div>
